# prep-2021.01

./: .gitignore  .gitlab-ci.yml  Makefile  README.md
btests/maps/stage1/: 10.map  14.map  15.map  16.map  17.map  18.map  19.map  2.map  20.map  21.map  25.map  26.map  27.map  28.map  29.map  3.map  30.map  31.map  32.map  35.map  36.map  37.map  38.map  39.map  4.map  40.map  41.map  42.map  43.map  47.map  48.map  49.map  5.map  50.map  51.map  52.map  53.map  54.map  58.map  59.map  (+35 more)
btests/maps/stage2/: 10.map  12.map  14.map  15.map  16.map  17.map  18.map  19.map  20.map  21.map  24.map  25.map  26.map  27.map  28.map  29.map  3.map  30.map  31.map  32.map  36.map  37.map  38.map  39.map  4.map  40.map  41.map  42.map  43.map  45.map  46.map  47.map  48.map  49.map  5.map  50.map  51.map  52.map  53.map  54.map  (+40 more)
project/include/: clothes.h  dog.h  enemy.h  equality_of_structures.h  func.h  game.h  map.h  matrix.h  parser.h  player.h  rat.h  tests.h  utils.h  wolf.h  work_with_file.h
project/src/: clothes.cpp  dog.cpp  enemy.cpp  equality_of_structures.c  func.c  game.cpp  main.c  main.cpp  map.cpp  matrix.c  matrix.cpp  parser.c  player.cpp  rat.cpp  test.c  tests.c  utils.c  wolf.cpp  work_with_file.c
project/tests/: CMakeLists.txt
